[gd_scene load_steps=24 format=3 uid="uid://bm3dbb2721rlv"]

[ext_resource type="FontFile" uid="uid://d262w60e08lx0" path="res://root/assets/fonts/gotham_bold.otf" id="1_inb2t"]
[ext_resource type="Script" path="res://root/ui/game_hud/game_hud.gd" id="1_ov5s7"]
[ext_resource type="FontFile" uid="uid://s4wa5l130xca" path="res://root/assets/fonts/Sniglet-ExtraBold.ttf" id="3_p3aoh"]
[ext_resource type="Script" path="res://root/ui/game_hud/countdown.gd" id="4_3mafe"]
[ext_resource type="PackedScene" uid="uid://b2xsysstc4op4" path="res://root/ui/game_hud/player_progress.tscn" id="5_htog8"]
[ext_resource type="Script" path="res://root/ui/game_hud/finished.gd" id="7_8n76h"]
[ext_resource type="PackedScene" uid="uid://boahtv6xc4gls" path="res://root/ui/game_hud/checkered_flag.tscn" id="7_fun4c"]
[ext_resource type="Script" path="res://root/ui/game_hud/CoinCount.gd" id="8_nesx2"]
[ext_resource type="Texture2D" uid="uid://b348et2kjhfos" path="res://root/assets/sprites/misc/coin.png" id="8_ow8wv"]
[ext_resource type="Script" path="res://root/ui/game_hud/MapSelect.gd" id="10_28ygc"]
[ext_resource type="Texture2D" uid="uid://iorrbb47d0go" path="res://root/assets/sprites/Menus/mapicon.png" id="11_u8xso"]
[ext_resource type="Script" path="res://root/ui/game_hud/Message.gd" id="12_0qo0e"]
[ext_resource type="Texture2D" uid="uid://ppf2ymkva7v8" path="res://root/assets/sprites/misc/new_five_second_speed_up_sprite copy.png" id="13_hapmh"]
[ext_resource type="Texture2D" uid="uid://dlfg0sydlmieg" path="res://root/assets/sprites/misc/white_bg.png" id="14_drto3"]
[ext_resource type="Texture2D" uid="uid://x48f3rof65yd" path="res://root/assets/sprites/misc/new_five_second_jump_boost_sprite copy.png" id="15_2nblh"]
[ext_resource type="Texture2D" uid="uid://daw1tv4xcvie0" path="res://root/assets/sprites/Menus/Pause.png" id="15_gco0a"]
[ext_resource type="Script" path="res://root/ui/game_hud/Options.gd" id="15_wpgv8"]
[ext_resource type="Texture2D" uid="uid://btlau7o84m53t" path="res://root/assets/sprites/Menus/Options.png" id="17_uir3a"]
[ext_resource type="Script" path="res://root/ui/game_hud/Play options.gd" id="18_1je4e"]
[ext_resource type="Texture2D" uid="uid://de716wmw1pclh" path="res://root/assets/sprites/misc/audio_on.png" id="20_l20dl"]

[sub_resource type="Theme" id="Theme_s4hqi"]
default_font = ExtResource("1_inb2t")
default_font_size = 30

[sub_resource type="Theme" id="Theme_8f8rd"]
default_font = ExtResource("3_p3aoh")
default_font_size = 100
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 50

[sub_resource type="Theme" id="Theme_dvs3g"]
default_font = ExtResource("3_p3aoh")
default_font_size = 100

[node name="GameHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ov5s7")

[node name="TimeRemaining" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 65.0
offset_bottom = 138.0
grow_horizontal = 2
theme = SubResource("Theme_s4hqi")
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TimeRemaining"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="TimeRemaining/HBoxContainer"]
z_index = -1
layout_mode = 2
size_flags_horizontal = 3
color = Color(0, 0, 0, 0.235294)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ColorRect" type="ColorRect" parent="HBoxContainer"]
modulate = Color(0, 0, 0, 0.27451)
layout_mode = 2
size_flags_horizontal = 0
color = Color(0.478431, 0, 0.247059, 1)

[node name="HorizontalPane" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0.509804)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -9.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1e-05)
pivot_offset = Vector2(0, 10)
theme_override_constants/margin_right = 0

[node name="ColorRect" type="ColorRect" parent="HorizontalPane"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Countdown" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)
theme = SubResource("Theme_8f8rd")
text = "3
"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_3mafe")

[node name="PlayerProgress" parent="." instance=ExtResource("5_htog8")]
layout_mode = 1
offset_top = 35.0
offset_bottom = 40.0

[node name="Finished" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1499.0
offset_top = -1.0
offset_right = 1499.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_dvs3g")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
text = "FINISHED!"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_8n76h")

[node name="CheckeredFlagTop" parent="." instance=ExtResource("7_fun4c")]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -515.0

[node name="CheckeredFlagBottom" parent="." instance=ExtResource("7_fun4c")]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CoinCount" type="Label" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 45.0
text = "0"
script = ExtResource("8_nesx2")

[node name="CoinSprite" type="TextureRect" parent="CoinCount"]
layout_mode = 0
offset_left = -60.0
offset_top = -20.0
offset_right = 1220.0
offset_bottom = 1260.0
scale = Vector2(0.05, 0.05)
texture = ExtResource("8_ow8wv")

[node name="MapSelect" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 325.0
offset_right = 50.0
offset_bottom = 348.0
text = "Select Map"
script = ExtResource("10_28ygc")

[node name="MapButton" type="TextureButton" parent="MapSelect"]
layout_mode = 0
offset_left = -16.0
offset_top = 22.0
offset_right = 1080.0
offset_bottom = 514.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("11_u8xso")

[node name="Message" type="Label" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 510.0
offset_right = 65.0
offset_bottom = 533.0
script = ExtResource("12_0qo0e")

[node name="PowerIcon1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 560.0
offset_right = 140.0
offset_bottom = 699.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("13_hapmh")

[node name="PowerBG1" type="TextureRect" parent="PowerIcon1"]
layout_mode = 0
offset_left = 124.0
offset_top = 138.0
offset_right = 250.0
offset_bottom = 277.0
rotation = 3.14159
texture = ExtResource("14_drto3")

[node name="PowerIcon2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 558.0
offset_right = 218.0
offset_bottom = 697.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("15_2nblh")

[node name="PowerBG2" type="TextureRect" parent="PowerIcon2"]
layout_mode = 0
offset_left = 126.0
offset_top = 142.0
offset_right = 252.0
offset_bottom = 281.0
rotation = 3.14159
texture = ExtResource("14_drto3")

[node name="Options" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 986.0
offset_top = -18.0
offset_right = 2082.0
offset_bottom = 474.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("15_gco0a")
script = ExtResource("15_wpgv8")

[node name="Play options" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 70.0
offset_right = 1105.0
offset_bottom = 562.0
texture = ExtResource("17_uir3a")
script = ExtResource("18_1je4e")

[node name="Button" type="Button" parent="Play options"]
layout_mode = 0
offset_left = 358.0
offset_top = 150.0
offset_right = 789.0
offset_bottom = 266.0

[node name="Button2" type="Button" parent="Play options"]
layout_mode = 0
offset_left = 358.0
offset_top = 281.0
offset_right = 789.0
offset_bottom = 397.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1122.0
offset_top = 617.0
offset_right = 1144.0
offset_bottom = 639.0

[node name="Sprite2D" type="Sprite2D" parent="Button"]
position = Vector2(11, 10.875)
scale = Vector2(0.0366057, 0.0395455)
texture = ExtResource("20_l20dl")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
